--- a/css/resume.css
+++ b/css/resume.css
@@ -82,6 +82,14 @@ p.lead {
 .dev-icons .list-inline-item i:hover {
   color: #BD5D38;
 }
+.card-img-top {
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
+}
+.card-body{
+  flex-grow: 1;
+}
 
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
